modernize and cleanup, remove gwt